Commence rewrite of RT section

--- a/prelim/bibliography.bib
+++ b/prelim/bibliography.bib
@@ -118,3 +118,25 @@
     number    = {SAND2014-4633},
     url       = {https://dakota.sandia.gov/sites/default/files/docs/6.11/Users-6.11.0.pdf}
 }
+
+% Lewis & Miller
+@book{lewis_miller,
+    title     = {Computational Methods of Neutron Transport},
+    author    = {Elmer E. Lewis and Warren F. Miller},
+    publisher = {John Wiley \& Sons},
+    year      = {1984},
+    isbn      = {978-0471092452},
+    url       = {https://www.osti.gov/biblio/5538794-computational-methods-neutron-transport}
+}
+
+% Stacey
+@book{stacey,
+    title     = {Nuclear Reactor Physics},
+    author    = {Weston M. Stacey},
+    publisher = {John Wiley \& Sons},
+    year      = {2007},
+    edition   = {2},
+    isbn      = {978-3-527-40679-1},
+    doi       = {10.1002/9783527611041},
+    url       = {https://onlinelibrary.wiley.com/doi/abs/10.1002/9783527611041}
+}
